--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -20,6 +20,7 @@
 @import 'input-groups';
 @import 'modals';
 @import 'navs';
+@import 'pagination';
 @import 'panels';
 @import 'popover';
 @import 'progress-bars';
