--- a/src/styles/_daterangepicker.scss
+++ b/src/styles/_daterangepicker.scss
@@ -1,5 +1,6 @@
 .daterangepicker.dropdown-menu {
     padding: 10px;
+    min-width: 0;
 }
 
 .daterangepicker.opensleft .ranges, .daterangepicker.opensleft .calendar {
