--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -138,6 +138,8 @@ $nav-tabs-padding:                          4px 20px 0 !default;
 //
 //##
 
+$text-muted:                        $gray !default;
+
 $page-header-bg:                    #fff !default;
 $page-header-border-color:          $gray-light !default;
 $page-header-padding:               14px 20px 13px !default;
