Created page-header-tabs class, fixed well bg color

--- a/src/styles/_navs.scss
+++ b/src/styles/_navs.scss
@@ -13,7 +13,8 @@
     }
 }
 
-.page-header + .nav-tabs {
+.page-header + .nav-tabs,
+.page-header-tabs {
     padding: $nav-tabs-padding;
     background-color: $page-header-bg;
     border-bottom: 1px solid $page-header-border-color;
