--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -1,4 +1,3 @@
-
 h5, .h5 {
     color: $gray-da;
     text-transform: uppercase;
@@ -57,6 +56,11 @@ h6, .h6 {
     .bootstrap-select.btn-group[class*="span"],
     .bootstrap-select.btn-group[class*="col-"] {
         margin: 0;
+    }
+
+    .dropdown-menu {
+        max-height: 500px;
+        overflow: auto;
     }
 }
 
