--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -104,7 +104,7 @@ $nav-link-hover-bg:                         transparent !default;
 $nav-link-hover-color:                      inherit !default;
 
 //== Sidebar
-$nav-sidebar-logo:                          url('../../demo/assets/logo-demo.png') !default;
+$nav-sidebar-logo:                          url("../../demo/assets/logo-demo.png") !default;
 $nav-sidebar-bg-color:                      $gray-darker !default;
 $nav-sidebar-border-color:                  #000 !default;
 $nav-sidebar-font-size:                     12px !default;
@@ -205,13 +205,6 @@ $table-cell-padding:            10px !default;
 $table-border-color:            $gray-light !default;
 
 $table-header-bg:               $gray-dark !default;
-
-
-//== Table list
-//
-//##
-
-$table-list-item-border:        $gray-lighter !default;
 
 
 //== Form states and alerts
