--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -36,28 +36,18 @@
     > thead > tr > th.sort-by {
         cursor: pointer;
 
-        // copy .fa-fw
-        > .sort-icon {
-            width: (18em / 14);
-            text-align: center;
-            display: inline-block;
-            font-family: FontAwesome;
-            font-style: normal;
-            font-weight: normal;
-            line-height: 1;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
+        .sort-icon {
+            @include fa("");
         }
 
-
         // fa-angle-up
-        &.sort-asc > .sort-icon:before {
-            content: "\f106";
+        &.sort-asc > .sort-icon {
+            @include fa("\f106");
         }
 
         // fa-angle-down
-        &.sort-desc > .sort-icon:before {
-            content: "\f107";
+        &.sort-desc > .sort-icon {
+            @include fa("\f107");
         }
     }
 }
