--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -41,8 +41,10 @@
     }
 }
 
-.sidebar-brand {
+.sidebar-brand,
+.product-selector > .btn-group {
     display: block;
+    background: $nav-sidebar-bg-color;
 
     > a {
         display: block;
@@ -59,7 +61,7 @@
         }
     }
 
-    > ul, ul {
+    ul {
         margin: 0;
         padding: 0;
         width: 100%;
@@ -68,6 +70,7 @@
         border-bottom: 1px solid $nav-sidebar-brand-bg-color;
         background: $nav-sidebar-brand-bg-color;
         box-shadow: none;
+        border-radius: 0;
 
         > li > a {
             padding: 12px 18px;
