--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -8,7 +8,7 @@
 @import "mixins";
 
 // import 3rd party
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "bootstrap";
 
 // import partials
 @import "alerts";
