--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -1,5 +1,5 @@
 // import Roboto font
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:300,400,700);
+@import url("//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:300,400,700");
 
 // setup variables
 @import "variables";
@@ -8,7 +8,7 @@
 @import "mixins";
 
 // import 3rd party
-@import "bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "vendor/bootstrap/styles/bootstrap";
 
 // import partials
 @import "alerts";
