--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -1,5 +1,5 @@
 // import Roboto font
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:300,400,700);
+@import url("//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:300,400,700");
 
 // setup variables
 @import "variables";
@@ -8,7 +8,58 @@
 @import "mixins";
 
 // import 3rd party
-@import "bootstrap";
+// Core variables and mixins
+@import "vendor/bootstrap/styles/bootstrap/variables";
+@import "vendor/bootstrap/styles/bootstrap/mixins";
+
+// Reset and dependencies
+@import "vendor/bootstrap/styles/bootstrap/normalize";
+@import "vendor/bootstrap/styles/bootstrap/print";
+
+// Core CSS
+@import "vendor/bootstrap/styles/bootstrap/scaffolding";
+@import "vendor/bootstrap/styles/bootstrap/type";
+@import "vendor/bootstrap/styles/bootstrap/code";
+@import "vendor/bootstrap/styles/bootstrap/grid";
+@import "vendor/bootstrap/styles/bootstrap/tables";
+@import "vendor/bootstrap/styles/bootstrap/forms";
+@import "vendor/bootstrap/styles/bootstrap/buttons";
+
+// Components
+@import "vendor/bootstrap/styles/bootstrap/component-animations";
+@import "vendor/bootstrap/styles/bootstrap/dropdowns";
+@import "vendor/bootstrap/styles/bootstrap/button-groups";
+@import "vendor/bootstrap/styles/bootstrap/input-groups";
+@import "vendor/bootstrap/styles/bootstrap/navs";
+@import "vendor/bootstrap/styles/bootstrap/navbar";
+@import "vendor/bootstrap/styles/bootstrap/breadcrumbs";
+@import "vendor/bootstrap/styles/bootstrap/pagination";
+@import "vendor/bootstrap/styles/bootstrap/pager";
+@import "vendor/bootstrap/styles/bootstrap/labels";
+@import "vendor/bootstrap/styles/bootstrap/badges";
+@import "vendor/bootstrap/styles/bootstrap/jumbotron";
+@import "vendor/bootstrap/styles/bootstrap/thumbnails";
+@import "vendor/bootstrap/styles/bootstrap/alerts";
+@import "vendor/bootstrap/styles/bootstrap/progress-bars";
+@import "vendor/bootstrap/styles/bootstrap/media";
+@import "vendor/bootstrap/styles/bootstrap/list-group";
+@import "vendor/bootstrap/styles/bootstrap/panels";
+@import "vendor/bootstrap/styles/bootstrap/responsive-embed";
+@import "vendor/bootstrap/styles/bootstrap/wells";
+@import "vendor/bootstrap/styles/bootstrap/close";
+
+// Components w/ JavaScript
+@import "vendor/bootstrap/styles/bootstrap/modals";
+@import "vendor/bootstrap/styles/bootstrap/tooltip";
+@import "vendor/bootstrap/styles/bootstrap/popovers";
+@import "vendor/bootstrap/styles/bootstrap/carousel";
+
+// Utility classes
+@import "vendor/bootstrap/styles/bootstrap/utilities";
+@import "vendor/bootstrap/styles/bootstrap/responsive-utilities";
+
+
+
 
 // import partials
 @import "alerts";
