--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -79,8 +79,8 @@
             padding: 12px 18px;
             color: $gray;
 
-            > span {
-                margin-left: 5px;
+            > img {
+                margin-right: 5px;
             }
 
             &:hover {
