--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -3,11 +3,14 @@
 
     > thead {
         border: 1px solid $table-header-bg;
+
+        + tbody {
+            border-top: none;
+        }
     }
 
     > tbody {
         border: 1px solid $table-border-color;
-        border-top: none;
     }
 
     > thead,
