--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -68,6 +68,7 @@
     ul {
         margin: 0;
         padding: 0;
+        padding-bottom: 1500px;
         width: 100%;
         border: 0;
         border-top: 1px solid $gray-darker;
@@ -79,6 +80,10 @@
         > li > a {
             padding: 12px 18px;
             color: $gray;
+
+            > i:first-child {
+                margin-right: 15px;
+            }
 
             > img {
                 margin-right: 5px;
