--- a/src/styles/_user-area.scss
+++ b/src/styles/_user-area.scss
@@ -1,8 +1,14 @@
 .user-area {
     line-height: 28px;
     margin-left: 15px;
+    color: $gray;
 
-    > img {
+    &.open > .dropdown-toggle {
+        -webkit-box-shadow: none;
+                box-shadow: none;
+    }
+
+    img {
         @extend .img-circle;
         width: 34px;
         height: 34px;
