Set icons to fixed width when in dropdown toggles

--- a/src/styles/_dropdowns.scss
+++ b/src/styles/_dropdowns.scss
@@ -1,5 +1,10 @@
 .dropdown-toggle {
     cursor: pointer;
+
+    > i {
+        width: (18em / 14);
+        text-align: center;
+    }
 }
 
 .dropdown-menu {
