--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -39,22 +39,23 @@
     }
 }
 
-.table-sortable {
-    > thead > tr > th.sort-by {
+.table-sortable,
+.sortable {
+    .sort-by {
         cursor: pointer;
 
-        > .sort-icon {
+        .sort-icon {
             width: (18em / 14);
             text-align: center;
         }
 
         // fa-angle-up
-        &.sort-asc > .sort-icon:before {
+        &.sort-asc .sort-icon:before {
             content: "\f106";
         }
 
         // fa-angle-down
-        &.sort-desc > .sort-icon:before {
+        &.sort-desc .sort-icon:before {
             content: "\f107";
         }
     }
