--- a/src/styles/_table-list.scss
+++ b/src/styles/_table-list.scss
@@ -32,7 +32,8 @@
     color: #fff;
     font-weight: normal;
     text-transform: uppercase;
-    border-bottom: none;
+    border-top: 1px solid $table-header-bg;
+    border-bottom: 1px solid $table-header-bg;
 
     > * {
         padding: $table-cell-padding * 0.5 $table-cell-padding;
