--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -74,6 +74,7 @@
 @import "sidebar";
 @import "table-list";
 @import "tables";
+@import "tags";
 @import "tags-input";
 @import "toggle";
 @import "tree-list";
