--- a/src/styles/_tags.scss
+++ b/src/styles/_tags.scss
@@ -28,7 +28,7 @@
     border: 1px solid $btn-warning-border;
 }
 
-.tag .close, tags-input .tags .tag-item .remove-button {
+.tag .close {
     float: none;
     margin-left: 10px;
     width: 20px;
@@ -41,54 +41,4 @@
     height: 20px;
     line-height: 20px;
     text-align: center;
-}
-
-tags-input {
-    display: block;
-
-    .host {
-        position: relative;
-    }
-
-    .tags {
-        @extend .form-control;
-        min-height: 34px;
-        height: auto;
-        padding: 0;
-        overflow: hidden;
-
-        .tag-list {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-        }
-
-        .tag-item {
-            padding: ($padding-base-vertical - 4) ($padding-base-horizontal - 8) ($padding-base-vertical - 4) ($padding-base-horizontal - 6);
-            display: inline-block;
-            margin: 4px 3px 3px;
-            @extend .tag-default;
-            float: left;
-
-            .remove-button {
-                margin-left: 4px;
-                width: 16px;
-                height: 16px;
-                line-height: 16px;
-            }
-
-            &.selected {
-                @extend .tag-warning;
-            }
-        }
-
-        .input {
-            border: 0;
-            outline: none;
-            padding: 6px 12px;
-            background-color: transparent;
-            float: left;
-            padding-left: 8px;
-        }
-    }
 }
