--- a/src/styles/_table-list.scss
+++ b/src/styles/_table-list.scss
@@ -38,4 +38,8 @@
     > * {
         padding: $table-cell-padding * 0.5 $table-cell-padding;
     }
+
+    .tooltip {
+        text-transform: none;
+    }
 }
