--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -69,6 +69,7 @@
     ul {
         margin: 0;
         padding: 0;
+        min-width: 0;
         width: 100%;
         border: 0;
         border-top: 1px solid $gray-darker;
