--- a/src/styles/_tree-list.scss
+++ b/src/styles/_tree-list.scss
@@ -6,7 +6,7 @@
         .row {
             &.subtree {
                 padding: 0;
-                height: 0;
+                display: none;
                 opacity: 0;
                 overflow: hidden;
 
@@ -16,7 +16,7 @@
 
                 &.open {
                     overflow: visible;
-                    height: auto;
+                    display: block;
                     opacity: 1;
                 }
             }
