Changed text color inside warning elements

--- a/src/styles/_bootstrap-select.scss
+++ b/src/styles/_bootstrap-select.scss
@@ -139,6 +139,7 @@
 }
 .bootstrap-select.btn-group .btn-warning ~ .dropdown-menu li.selected a {
   background: $brand-warning;
+  color: $gray-dark;
 }
 .bootstrap-select.btn-group .btn-danger ~ .dropdown-menu li.selected a {
   background: $brand-danger;
