--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -65,6 +65,7 @@
 @import "forms";
 @import "grid";
 @import "input-groups";
+@import "labels";
 @import "loading-bar";
 @import "modals";
 @import "navs";
