Fix warning alert link color

--- a/src/styles/_alerts.scss
+++ b/src/styles/_alerts.scss
@@ -15,6 +15,12 @@
     text-decoration: underline;
 }
 
-.alert-warning h4 small {
-    color: $gray-da;
+.alert-warning {
+    h4 small {
+        color: $gray-da;
+    }
+
+    a {
+        color: $gray-dark;
+    }
 }
