--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -247,6 +247,8 @@ $input-border-focus:                $brand-primary-dark;
 
 $input-color-placeholder:           $gray-light !default;
 
+$input-disabled-color:              $gray-light !default;
+
 $input-group-addon-bg:              $gray !default;
 $input-group-addon-border-color:    $gray !default;
 
