Change color for input-group when has validation states and added it to the demo page

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -9,6 +9,14 @@
     @include box-shadow(none);
 }
 
+.has-error .input-group-addon,
+.has-success .input-group-addon {
+    color: #fff;
+}
+.has-warning .input-group-addon {
+    color: $gray-dark;
+}
+
 select.input-xs {
     padding: 0;
 }
