--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -75,21 +75,30 @@
         box-shadow: none;
         border-radius: 0;
 
-        > li > a {
-            padding: 12px 18px;
-            color: $purple-bold;
+        > li {
+            > a {
+                padding: 12px 18px;
+                color: $purple-bold;
 
-            > i:first-child {
-                margin-right: 15px;
+                > i:first-child {
+                    margin-right: 15px;
+                }
+
+                > img {
+                    margin-right: 5px;
+                }
+
+                &:hover {
+                    background: $nav-sidebar-brand-bg-color;
+                    color: $nav-sidebar-link-hover-color;
+                }
             }
 
-            > img {
-                margin-right: 5px;
-            }
-
-            &:hover {
-                background: $nav-sidebar-brand-bg-color;
-                color: $nav-sidebar-link-hover-color;
+            &.product {
+                font-family: Dosis;
+                font-weight: bold;
+                text-transform: uppercase;
+                font-size: 17px;
             }
         }
     }
