Adjust some padding and margin

--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -7,6 +7,8 @@
     overflow: hidden;
 
     > .nav {
+        margin-top: 12px;
+
         > li {
             > a {
                 border-left: 5px solid transparent;
